--- a/research.html
+++ b/research.html
@@ -339,7 +339,8 @@ varied characteristics and five popular graph algorithms.
 <h3 style="font-size: 16pt">
  SixTrack V and runtime environment
  </h3>
- <h4 style="font-size: 13pt"><font color="#696969">with</font> <i> R. De Maria, J. Andersson, V.K. Berglyd Olsen, L. Field, M. Giovannozzi, P.D. Hermes, N. H&#248imyr,
+ <h4 style="font-size: 13pt"> <!-- <font color="#696969">with</font> -->
+	 <i> R. De Maria, J. Andersson, V.K. Berglyd Olsen, L. Field, M. Giovannozzi, P.D. Hermes, N. H&#248imyr,
  S. Kostoglou, G. Iadarola, E. Mcintosh, A. Mereghetti, J. Molson, D. Pellegrini,
  T. Persson, M. Schwinzerl, E.H. Maclean, K.N. Sjobak, I. Zacharov, <u>S. Singh</u>, </i> <!-- <i>et al.</i>  --> </h4>
  <h4 style="font-size: 13pt">in International Journal of Modern Physics A, 2019. (Invited Paper)</h4>
