--- a/research.html
+++ b/research.html
@@ -182,7 +182,7 @@ Approximate Nearest Neighbour Search (ANNS) is a subroutine in algorithms routin
 <h3 style="font-size: 16pt">
 Engineering Fast Algorithms for the Bottleneck Matching Problem*
 </h3>
-<h4 style="font-size: 13pt"><i>Ioannis Panagiotas,&#32;Gr&eacute;goire Pichon,&#32;<u>Somesh</u> Singh,&#32;Bora U&#231;ar,</i></h4>
+<h4 style="font-size: 13pt"><i>Ioannis Panagiotas,&#32;Gr&eacute;goire Pichon,&#32;<u>Somesh Singh</u>,&#32;Bora U&#231;ar,</i></h4>
 <h4 style="font-size: 13pt">in European Symposium on Algorithms (ESA), 2023.</h4>
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#esa23" aria-expanded="false" aria-controls="esa23">
