--- a/index.html
+++ b/index.html
@@ -114,25 +114,29 @@ My research focuses on designing techniques for accelerating large-scale graph a
             <!-- GPUs, aided by approximate computing.-->
             I am a R&amp;D software engineer at Siemens EDA in Meylan, Grenoble, France. Previously,
             I was a postdoctoral researcher
-            with Inria, CNRS, and LabEx MILYON,
+            with
+	    <a href="https://www.inria.fr" target="_blank">Inria</a>, 
+	    <a href="https://www.cnrs.fr" target="_blank">CNRS</a>, 
+	    and 
+	    <a href="https://milyon.universite-lyon.fr" target="_blank">LabEx MILYON</a>
             in the
-            <a href="https://www.ens-lyon.fr/LIP/ROMA/" target="_blank">ROMA</a>
+            <a href="https://www.ens-lyon.fr/LIP/ROMA" target="_blank">ROMA</a>
             team at
-            <a href="https://www.ens-lyon.fr/LIP/" target="_blank">LIP</a>, ENS de Lyon, where I was
+            <a href="https://www.ens-lyon.fr/LIP" target="_blank">LIP</a>, ENS de Lyon, where I was
             hosted by
-            <a href="https://perso.ens-lyon.fr/bora.ucar/" target="_blank">Bora Uçar</a>. Prior
-            to that, I obtained my Ph.D. (and Master's) from the
-            <a href="https://www.cse.iitm.ac.in/" target="_blank">
+            <a href="https://perso.ens-lyon.fr/bora.ucar" target="_blank">Bora Uçar</a>. 
+	    Prior to that, I obtained my Ph.D. (and Master's) from the
+            <a href="https://www.cse.iitm.ac.in" target="_blank">
               Indian Institute of Technology Madras</a
             >
             under the supervision of
             <!--I was advised by -->
-            <a href="https://www.cse.iitm.ac.in/~rupesh/" target="_blank">Rupesh Nasre</a>.
+            <a href="https://www.cse.iitm.ac.in/~rupesh" target="_blank">Rupesh Nasre</a>.
           </p>
           <!--
 	 <p>
         I obtained my Bachelor's in Computer Science and Engineering from the
-<a href = "http://nituk.ac.in/" target="_blank">National Institute of Technology Uttarakhand</a>.
+<a href = "http://nituk.ac.in" target="_blank">National Institute of Technology Uttarakhand</a>.
         </p>
 -->
           <hr />
