--- a/misc.html
+++ b/misc.html
@@ -220,8 +220,8 @@
 <dl>
     Artifact Evaluation Committee:
 
-  <a href= "https://2025.splashcon.org/committee/splash-2025-oopsla-artifacts-artifact-evaluation-committee" target="_blank">
-        OOPSLA 2025</a>,
+  <strike><a href= "https://2025.splashcon.org/committee/splash-2025-oopsla-artifacts-artifact-evaluation-committee" target="_blank">
+        OOPSLA 2025</a></strike>,
 
   <a href= "https://pldi24.sigplan.org/committee/pldi-2024-pldi-research-artifacts-artifact-evaluation-committee" target="_blank">
         PLDI 2024</a>,
