--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ My research focuses on designing techniques for accelerating large-scale graph a
 	    <a href="https://www.inria.fr" target="_blank">Inria</a>, 
 	    <a href="https://www.cnrs.fr" target="_blank">CNRS</a>, 
 	    and 
-	    <a href="https://milyon.universite-lyon.fr" target="_blank">LabEx MILYON</a>
+	    <a href="https://milyon.universite-lyon.fr" target="_blank">LabEx MILYON</a>,
             in the
             <a href="https://www.ens-lyon.fr/LIP/ROMA" target="_blank">ROMA</a>
             team at
