--- a/misc.html
+++ b/misc.html
@@ -221,7 +221,7 @@
     Artifact Evaluation Committee:
 
   <strike><a href= "https://2025.splashcon.org/committee/splash-2025-oopsla-artifacts-artifact-evaluation-committee" target="_blank">
-        OOPSLA 2025</a></strike>,
+        OOPSLA 2025</a>,</strike>
 
   <a href= "https://pldi24.sigplan.org/committee/pldi-2024-pldi-research-artifacts-artifact-evaluation-committee" target="_blank">
         PLDI 2024</a>,
