add code link for SixTrackLib

--- a/research.html
+++ b/research.html
@@ -351,6 +351,7 @@ varied characteristics and five popular graph algorithms.
 
    <a href="docs/papers/ijmpa19.pdf" target="_blank">(pdf)</a>
    <a href="https://doi.org/10.1142/S0217751X19420351" target="_blank">(doi)</a>
+   <a href="https://github.com/SixTrack/SixTrackLib" target="_blank">(code)</a>
  </p>
 
  <p class="collapse" id="ijmpa" style="font-size: 11pt">
