--- a/index.html
+++ b/index.html
@@ -127,11 +127,13 @@ My research focuses on designing techniques for accelerating large-scale graph a
             <a href="https://perso.ens-lyon.fr/bora.ucar" target="_blank">Bora Uçar</a>. 
 	    Prior to that, I obtained my Ph.D. (and Master's) from the
             <a href="https://www.cse.iitm.ac.in" target="_blank">
-              Indian Institute of Technology Madras</a
-            >
+              Indian Institute of Technology Madras</a>
             under the supervision of
             <!--I was advised by -->
             <a href="https://www.cse.iitm.ac.in/~rupesh" target="_blank">Rupesh Nasre</a>.
+	     I completed my Bachelor's in Computer Science and Engineering from the 
+	     <a href = "https://nituk.ac.in" target="_blank">
+		National Institute of Technology Uttarakhand</a>.
           </p>
           <!--
 	 <p>
