--- a/misc.html
+++ b/misc.html
@@ -296,7 +296,7 @@
 <a href="https://topal.gitlabpages.inria.fr/" target="_blank">TOPAL Inria Team</a>, Bordeaux, France.
 
   <span style="float:right;font-weight:normal; font-style:italic">
-    March 2024 &amp; December 2023
+    [ March 2024, December 2023 ]
   </span>
 </dl>
 </li>
