--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@ My research focuses on designing techniques for accelerating large-scale graph a
 	    <a href="https://www.inria.fr" target="_blank">Inria</a>, 
 	    <a href="https://www.cnrs.fr" target="_blank">CNRS</a>, 
 	    and 
-	    <a href="https://milyon.universite-lyon.fr" target="_blank">LabEx MILYON</a>,
+	    <a href="https://milyon.universite-lyon.fr" target="_blank">LabEx MILYON</a>
             in the
             <a href="https://www.ens-lyon.fr/LIP/ROMA" target="_blank">ROMA</a>
             team at
-            <a href="https://www.ens-lyon.fr/LIP" target="_blank">LIP</a>, ENS de Lyon, where I was
+            <a href="https://www.ens-lyon.fr/LIP" target="_blank">LIP</a>, ENS de Lyon, <!-- where I was -->
             hosted by
             <a href="https://perso.ens-lyon.fr/bora.ucar" target="_blank">Bora Uçar</a>. 
 	    Prior to that, I obtained my Ph.D. (and Master's) from the
@@ -131,7 +131,7 @@ My research focuses on designing techniques for accelerating large-scale graph a
             under the supervision of
             <!--I was advised by -->
             <a href="https://www.cse.iitm.ac.in/~rupesh" target="_blank">Rupesh Nasre</a>.
-	     I completed my Bachelor's in Computer Science and Engineering from the 
+	     I hold a Bachelor's in Computer Science and Engineering from the 
 	     <a href = "https://nituk.ac.in" target="_blank">
 		National Institute of Technology Uttarakhand</a>.
           </p>
