--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ My research focuses on designing techniques for accelerating large-scale graph a
             under the supervision of
             <!--I was advised by -->
             <a href="https://www.cse.iitm.ac.in/~rupesh" target="_blank">Rupesh Nasre</a>.
-	     I hold a Bachelor's in Computer Science and Engineering from the 
+	     I completed my Bachelor's in Computer Science and Engineering from the 
 	     <a href = "https://nituk.ac.in" target="_blank">
 		National Institute of Technology Uttarakhand</a>.
           </p>
