--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@ My research focuses on designing techniques for accelerating large-scale graph a
             <a href="https://www.ens-lyon.fr/LIP" target="_blank">LIP</a>, ENS de Lyon, <!-- where I was -->
             hosted by
             <a href="https://perso.ens-lyon.fr/bora.ucar" target="_blank">Bora Uçar</a>. 
-	    Prior to that, I obtained my Ph.D. (and Master's) from the
+	    <!--Prior to that, --> 
+			I obtained my Ph.D. (and Master's) from the
             <a href="https://www.cse.iitm.ac.in" target="_blank">
               Indian Institute of Technology Madras</a>
             under the supervision of
