--- a/research.html
+++ b/research.html
@@ -110,6 +110,10 @@ During postdoc, my focus was on designing and developing methods and techniques 
 <!--
 Currently, my focus is on optimizing and enhancing the performance of sparse matrix and tensor computations on parallel architectures.
 -->
+	
+<br>
+
+I left academia in September 2024.
 </p>
 
 <hr />
