--- a/research.html
+++ b/research.html
@@ -113,7 +113,7 @@ Currently, my focus is on optimizing and enhancing the performance of sparse mat
 </p>
 				
 <p>
-I left academia in September 2024. The publications from 2025 are based on work completed earlier.
+I left academia in September 2024. The publications from 2025 are based on work completed before then.
 </p>
 
 <hr />
