--- a/misc.html
+++ b/misc.html
@@ -292,7 +292,7 @@
 <dl>
   <a href= "https://topal.gitlabpages.inria.fr/topal-working-group/" target="_blank">
        Talks</a>
- at
+ at the <i>Working Group</i> of 
 <a href="https://topal.gitlabpages.inria.fr/" target="_blank">TOPAL Inria Team</a>, Bordeaux, France.
 
   <span style="float:right;font-weight:normal; font-style:italic">
@@ -367,7 +367,7 @@ Sparse Days 2022</a>, Saint-Girons, France.
 <dl>
   <a href= "http://www.ens-lyon.fr/LIP/ROMA/workinggroup.php" target="_blank">
        Talk</a>
- at
+ at the <i>Working Group</i> of
 <a href="https://www.ens-lyon.fr/LIP/ROMA/" target="_blank">ROMA Inria Team</a>
  at
 <a href="http://www.ens-lyon.fr/LIP/" target="_blank">LIP</a>, Lyon, France.
