--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ My research focuses on designing techniques for accelerating large-scale graph a
             in the
             <a href="https://www.ens-lyon.fr/LIP/ROMA" target="_blank">ROMA</a>
             team at
-            <a href="https://www.ens-lyon.fr/LIP" target="_blank">LIP</a>, ENS de Lyon; <!-- where I was -->
+            <a href="https://www.ens-lyon.fr/LIP" target="_blank">LIP</a>, <a href="https://www.ens-lyon.fr" target="_blank">ENS de Lyon</a>; <!-- where I was -->
             I was hosted by
             <a href="https://perso.ens-lyon.fr/bora.ucar" target="_blank">Bora Uçar</a>. 
 	    <!--Prior to that, --> 
